Added defs to schema

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -689,18 +689,14 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
-{%             if peer_group.additional_paths.send.any is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} additional-paths send any
-{%             elif peer_group.additional_paths.send.any is arista.avd.defined(false) %}
-      no neighbor {{ peer_group.name }} additional-paths send any
-{%             elif peer_group.additional_paths.send.backup is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} additional-paths send backup
-{%             elif peer_group.additional_paths.send.ecmp is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} additional-paths send ecmp
-{%             elif peer_group.additional_paths.send.ecmp_limit is arista.avd.defined %}
-      neighbor {{ peer_group.name }} additional-paths send ecmp limit {{ peer_group.additional_paths.send.ecmp_limit }}
-{%             elif peer_group.additional_paths.send.limit is arista.avd.defined %}
-      neighbor {{ peer_group.name }} additional-paths send limit {{ peer_group.additional_paths.send.limit }}
+{%             if peer_group.additional_paths.send is arista.avd.defined %}
+{%                 if peer_group.additional_paths.ecmp_limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send ecmp limit {{ peer_group.additional_paths.ecmp_limit }}
+{%                 elif peer_group.additional_paths.limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send limit {{ peer_group.additional_paths.limit }}
+{%                 else %}
+      neighbor {{ peer_group.name }} additional-paths send {{ peer_group.additional_paths.send }}
+{%                 endif %}
 {%             endif %}
 {%             if peer_group.domain_remote is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} domain remote
@@ -1263,16 +1259,12 @@ router bgp {{ router_bgp.as }}
 {%         if router_bgp.address_family_path_selection.bgp.additional_paths.receive is arista.avd.defined(true) %}
       bgp additional-paths receive
 {%         endif %}
-{%         if router_bgp.address_family_path_selection.bgp.additional_paths.send.any is arista.avd.defined(true) %}
-      bgp additional-paths send any
-{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send.backup is arista.avd.defined(true) %}
-      bgp additional-paths send backup
-{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send.ecmp is arista.avd.defined(true) %}
-      bgp additional-paths send ecmp
-{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send.ecmp_limit is arista.avd.defined %}
-      bgp additional-paths send ecmp limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.send.ecmp_limit }}
-{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send.limit is arista.avd.defined %}
-      bgp additional-paths send limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.send.limit }}
+{%         if router_bgp.address_family_path_selection.bgp.additional_paths.send is arista.avd.defined %}
+      bgp additional-paths send ecmp limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.ecmp_limit }}
+{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.limit is arista.avd.defined %}
+      bgp additional-paths send limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.limit }}
+{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send is arista.avd.defined %}
+      bgp additional-paths send {{ router_bgp.address_family_path_selection.bgp.additional_paths.send }}
 {%         endif %}
 {%         for peer_group in router_bgp.address_family_path_selection.peer_groups | arista.avd.natural_sort('name') %}
 {%             if peer_group.activate is arista.avd.defined(true) %}
@@ -1283,16 +1275,12 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
-{%             if peer_group.additional_paths.send.any is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} additional-paths send any
-{%             elif peer_group.additional_paths.send.backup is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} additional-paths send backup
-{%             elif peer_group.additional_paths.send.ecmp is arista.avd.defined(true) %}
-      neighbor {{ peer_group.name }} additional-paths send ecmp
-{%             elif peer_group.additional_paths.send.ecmp_limit is arista.avd.defined %}
-      neighbor {{ peer_group.name }} additional-paths send ecmp limit {{ peer_group.additional_paths.send.ecmp_limit }}
-{%             elif peer_group.additional_paths.send.limit is arista.avd.defined %}
-      neighbor {{ peer_group.name }} additional-paths send limit {{ peer_group.additional_paths.send.limit }}
+{%             if peer_group.additional_paths.ecmp_limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send ecmp limit {{ peer_group.additional_paths.ecmp_limit }}
+{%             elif peer_group.additional_paths.limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send limit {{ peer_group.additional_paths.limit }}
+{%             elif peer_group.additional_paths.send is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send {{ peer_group.additional_paths.send }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_path_selection.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -1304,16 +1292,12 @@ router bgp {{ router_bgp.as }}
 {%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
-{%             if neighbor.additional_paths.send.any is arista.avd.defined(true) %}
-      neighbor {{ neighbor.ip_address }} additional-paths send any
-{%             elif neighbor.additional_paths.send.backup is arista.avd.defined(true) %}
-      neighbor {{ neighbor.ip_address }} additional-paths send backup
-{%             elif neighbor.additional_paths.send.ecmp is arista.avd.defined(true) %}
-      neighbor {{ neighbor.ip_address }} additional-paths send ecmp
-{%             elif neighbor.additional_paths.send.ecmp_limit is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} additional-paths send ecmp limit {{ neighbor.additional_paths.send.ecmp_limit }}
-{%             elif neighbor.additional_paths.send.limit is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} additional-paths send limit {{ neighbor.additional_paths.send.limit }}
+{%             if neighbor.additional_paths.ecmp_limit is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} additional-paths send ecmp limit {{ neighbor.additional_paths.ecmp_limit }}
+{%             elif neighbor.additional_paths.limit is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} additional-paths send limit {{ neighbor.additional_paths.limit }}
+{%             elif neighbor.additional_paths.send is arista.avd.defined  %}
+      neighbor {{ neighbor.ip_address }} additional-paths send {{ neighbor.additional_paths.send }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
@@ -1803,16 +1787,14 @@ router bgp {{ router_bgp.as }}
 {%             if vrf.address_family_ipv4.bgp.additional_paths.receive is arista.avd.defined(true) %}
          bgp additional-paths receive
 {%             endif %}
-{%             if vrf.address_family_ipv4.bgp.additional_paths.send.any is arista.avd.defined(true) %}
-         bgp additional-paths send any
-{%             elif vrf.address_family_ipv4.bgp.additional_paths.send.backup is arista.avd.defined(true) %}
-         bgp additional-paths send backup
-{%             elif vrf.address_family_ipv4.bgp.additional_paths.send.ecmp is arista.avd.defined(true) %}
-         bgp additional-paths send ecmp
-{%             elif vrf.address_family_ipv4.bgp.additional_paths.send.ecmp_limit is arista.avd.defined %}
-         bgp additional-paths send ecmp limit {{ vrf.address_family_ipv4.bgp.additional_paths.send.ecmp_limit }}
-{%             elif vrf.address_family_ipv4.bgp.additional_paths.send.limit is arista.avd.defined %}
-         bgp additional-paths send limit {{ vrf.address_family_ipv4.bgp.additional_paths.send.limit }}
+{%             if vrf.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
+{%                 if vrf.address_family_ipv4.bgp.additional_paths.ecmp_limit is arista.avd.defined %}
+         bgp additional-paths send ecmp limit {{ vrf.address_family_ipv4.bgp.additional_paths.ecmp_limit }}
+{%                 elif vrf.address_family_ipv4.bgp.additional_paths.limit is arista.avd.defined %}
+         bgp additional-paths send limit {{ vrf.address_family_ipv4.bgp.additional_paths.limit }}
+{%                 else %}
+         bgp additional-paths send {{ vrf.address_family_ipv4.bgp.additional_paths.send }}
+{%                 endif %}
 {%             endif %}
 {%             for neighbor in vrf.address_family_ipv4.neighbors | arista.avd.natural_sort('ip_address') %}
 {%                 if neighbor.activate is arista.avd.defined(true) %}
@@ -1953,16 +1935,14 @@ router bgp {{ router_bgp.as }}
 {%             if vrf.address_family_ipv6.bgp.additional_paths.receive is arista.avd.defined(true) %}
          bgp additional-paths receive
 {%             endif %}
-{%             if vrf.address_family_ipv6.bgp.additional_paths.send.any is arista.avd.defined(true) %}
-         bgp additional-paths send any
-{%             elif vrf.address_family_ipv6.bgp.additional_paths.send.backup is arista.avd.defined(true) %}
-         bgp additional-paths send backup
-{%             elif vrf.address_family_ipv6.bgp.additional_paths.send.ecmp is arista.avd.defined(true) %}
-         bgp additional-paths send ecmp
-{%             elif vrf.address_family_ipv6.bgp.additional_paths.send.ecmp_limit is arista.avd.defined %}
-         bgp additional-paths send ecmp limit {{ vrf.address_family_ipv6.bgp.additional_paths.send.ecmp_limit }}
-{%             elif vrf.address_family_ipv6.bgp.additional_paths.send.limit is arista.avd.defined %}
-         bgp additional-paths send limit {{ vrf.address_family_ipv6.bgp.additional_paths.send.limit }}
+{%             if vrf.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
+{%                 if vrf.address_family_ipv6.bgp.additional_paths.ecmp_limit is arista.avd.defined %}
+         bgp additional-paths send ecmp limit {{ vrf.address_family_ipv6.bgp.additional_paths.ecmp_limit }}
+{%                 elif vrf.address_family_ipv6.bgp.additional_paths.limit is arista.avd.defined %}
+         bgp additional-paths send limit {{ vrf.address_family_ipv6.bgp.additional_paths.limit }}
+{%                 else %}
+         bgp additional-paths send {{ vrf.address_family_ipv6.bgp.additional_paths.send }}
+{%                 endif %}
 {%             endif %}
 {%             for neighbor in vrf.address_family_ipv6.neighbors | arista.avd.natural_sort('ip_address') %}
 {%                 if neighbor.activate is arista.avd.defined(true) %}
