--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/influxdb.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/influxdb.j2
@@ -8,10 +8,8 @@
 !
 monitor telemetry influx
 {%     if influxdb.destinations is arista.avd.defined %}
-{%         for destination in influxdb.destinations %}
-{%             if destination.name is arista.avd.defined %}
+{%         for destination in influxdb.destinations | arista.avd.natural_sort('name') %}
    destination influxdb {{ destination.name }}
-{%             endif %}
 {%             if destination.url is arista.avd.defined %}
       url {{ destination.url }}
 {%             endif %}
@@ -21,8 +19,8 @@ monitor telemetry influx
 {%             if destination.policy is arista.avd.defined %}
       retention policy {{ destination.policy }}
 {%             endif %}
-{%             if destination.vrf is arista.avd.defined %}
-      vrf {{ destination.vrf }}
+{%             if influxdb.vrf is arista.avd.defined %}
+      vrf {{ influxdb.vrf }}
 {%             endif %}
 {%             if destination.username is arista.avd.defined and destination.encryption is arista.avd.defined %}
       username {{ destination.username }} password {{ destination.encryption }} {{ destination.password }}
@@ -32,10 +30,8 @@ monitor telemetry influx
 {%         endfor %}
 {%     endif %}
 {%     if influxdb.source_sockets is arista.avd.defined %}
-{%         for socket in influxdb.source_sockets %}
-{%             if socket.name is arista.avd.defined %}
+{%         for socket in influxdb.source_sockets | arista.avd.natural_sort('name') %}
    source socket {{ socket.name }}
-{%             endif %}
 {%             if socket.url is arista.avd.defined %}
       url {{ socket.url }}
 {%             endif %}
@@ -45,10 +41,8 @@ monitor telemetry influx
 {%         endfor %}
 {%     endif %}
 {%     if influxdb.tags is arista.avd.defined %}
-{%         for tag in influxdb.tags %}
-{%             if tag.name is arista.avd.defined %}
+{%         for tag in influxdb.tags | arista.avd.natural_sort('name') %}
    tag global {{ tag.name }} {{ tag.value }}
-{%             endif %}
 {%         endfor %}
 {%     endif %}
 {%     if influxdb.source_standard_enabled is arista.avd.defined(false) %}
