--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/sflow.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/sflow.j2
@@ -48,6 +48,10 @@ sFlow Sample Rate: {{ sflow.sample }}
 
 sFlow Sample Input Subinterface is enabled.
 {%     endif %}
+{%     if sflow.sample_output_subinterface is arista.avd.defined(true) %}
+
+sFlow Sample Output Subinterface is enabled.
+{%     endif %}
 {%     if sflow.polling_interval is arista.avd.defined %}
 
 sFlow Polling Interval: {{ sflow.polling_interval }}
