Feat(eos_cli_config_gen): Add eos_cli support under router_isis

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
@@ -291,4 +291,7 @@ router isis {{ router_isis.instance }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
+{%     if router_isis.eos_cli is arista.avd.defined %}
+   {{ router_isis.eos_cli | indent(3, false) }}
+{%     endif %}
 {% endif %}
