addressing review comments

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -271,9 +271,10 @@
 {% include 'eos/peer-filters.j2' %}
 {# router bgp configuration #}
 {% include 'eos/router-bgp.j2' %}
+{# router internet exit configuration #}
+{% include 'eos/router-internet-exit.j2' %}
 {# router igmp configuration #}
 {% include 'eos/router-igmp.j2' %}
-{% include 'eos/router-internet-exit.j2' %}
 {# router multicast configuration #}
 {% include 'eos/router-multicast.j2' %}
 {# router general configuration #}
