--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-internet-exit.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-internet-exit.j2
@@ -5,13 +5,15 @@
 #}
 {# eos - router internet-exit #}
 {% if router_internet_exit is arista.avd.defined %}
+!
 router internet-exit
 {%     if router_internet_exit.exit_groups is arista.avd.defined %}
-{%         for exit_group in router_internet_exit.exit_groups %}
+{%         for exit_group in router_internet_exit.exit_groups | arista.avd.default([]) %}
+    !
     exit-group {{ exit_group.name }}
-{%             if exit_group.locals is arista.avd.defined %}
-{%                 for local in exit_group.locals %}
-        local connection {{ local.connection }}
+{%             if exit_group.local_connections is arista.avd.defined %}
+{%                 for local_connection in exit_group.local_connections | arista.avd.default([]) %}
+        local connection {{ local_connection.name }}
 {%                 endfor %}
 {%             endif %}
 {%             if exit_group.fib_default is arista.avd.defined(true) %}
@@ -20,15 +22,12 @@ router internet-exit
 {%         endfor %}
 {%     endif %}
 {%     if router_internet_exit.policies is arista.avd.defined %}
-{%         for policy in router_internet_exit.policies %}
+{%         for policy in router_internet_exit.policies | arista.avd.default([]) %}
+    !
     policy {{ policy.name }}
 {%             if policy.exit_groups is arista.avd.defined %}
-{%                 for exit_group in policy.exit_groups %}
-{%                     if exit_group.before is arista.avd.defined %}
-        exit-group {{ exit_group.name }} before {{ exit_group.before }}
-{%                     elif exit_group.after is arista.avd.defined %}
-        exit-group {{ exit_group.name }} after {{ exit_group.after }}
-{%                     else %}
+{%                 for exit_group in policy.exit_groups | arista.avd.default([]) %}
+{%                     if exit_group.name is arista.avd.defined %}
         exit-group {{ exit_group.name }}
 {%                     endif %}
 {%                 endfor %}
