--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/dot1x.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/dot1x.j2
@@ -18,8 +18,58 @@ dot1x protocol bpdu bypass
 {%     if dot1x.dynamic_authorization is arista.avd.defined(true) %}
 dot1x dynamic-authorization
 {%     endif %}
-{%     if dot1x.mac_based_authentication is arista.avd.defined or dot1x.radius_av_pair is arista.avd.defined %}
+{%     if dot1x.mac_based_authentication is arista.avd.defined or dot1x.radius_av_pair is arista.avd.defined or dot1x.aaa.unresponsive is arista.avd.defined %}
 dot1x
+{%         if dot1x.aaa.unresponsive is arista.avd.defined %}
+{%             set aaa_config = "aaa unresponsive" %}
+{%             if dot1x.aaa.unresponsive.phone_action.apply_alternate is arista.avd.defined(true) %}
+{%                 if dot1x.aaa.unresponsive.phone_action.apply_cached_results is arista.avd.defined(true) and dot1x.aaa.unresponsive.phone_action.traffic_allow is arista.avd.defined(true) %}
+{%                     if dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
+   {{ aaa_config }} phone action apply cached-results timeout {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit }} else traffic allow
+{%                     else %}
+   {{ aaa_config }} phone action apply cached-results else traffic allow
+{%                     endif %}
+{%                 endif %}
+{%             elif dot1x.aaa.unresponsive.phone_action.traffic_allow is arista.avd.defined(true) %}
+   {{ aaa_config }} phone action traffic allow
+{%             elif dot1x.aaa.unresponsive.phone_action.apply_cached_results is arista.avd.defined(true) %}
+{%                 if dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
+   {{ aaa_config }} phone action apply cached-results timeout {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit }}
+{%                 else %}
+   {{ aaa_config }} phone action apply cached-results
+{%                 endif %}
+{%             endif %}
+{%             if dot1x.aaa.unresponsive.action.apply_alternate is arista.avd.defined(true) %}
+{%                 if dot1x.aaa.unresponsive.phone_action.traffic_allow is arista.avd.defined(true) %}
+{%                     set traffic = "traffic allow" %}
+{%                 elif dot1x.aaa.unresponsive.phone_action.traffic_allow_vlan is arista.avd.defined %}
+{%                     set traffic = "traffic allow vlan " ~ dot1x.aaa.unresponsive.phone_action.traffic_allow_vlan %}
+{%                 endif %}
+{%                 if dot1x.aaa.unresponsive.action.apply_cached_results is arista.avd.defined(true) and (dot1x.aaa.unresponsive.action.traffic_allow is arista.avd.defined(true) or dot1x.aaa.unresponsive.action.traffic_allow_vlan is arista.avd.defined) %}
+{%                     if dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
+   {{ aaa_config }} action apply cached-results timeout {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit }} else {{ traffic }}
+{%                     else %}
+   {{ aaa_config }} action apply cached-results else {{ traffic }}
+{%                     endif %}
+{%                 endif %}
+{%             elif dot1x.aaa.unresponsive.action.traffic_allow is arista.avd.defined(true) %}
+   {{ aaa_config }} action traffic allow
+{%             elif dot1x.aaa.unresponsive.action.traffic_allow_vlan is arista.avd.defined %}
+   {{ aaa_config }} action traffic allow vlan {{ dot1x.aaa.unresponsive.action.traffic_allow_vlan }}
+{%             elif dot1x.aaa.unresponsive.action.apply_cached_results is arista.avd.defined(true) %}
+{%                 if dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
+   {{ aaa_config }} action apply cached-results timeout {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit }}
+{%                 else %}
+   {{ aaa_config }} action apply cached-results
+{%                 endif %}
+{%             endif %}
+{%             if dot1x.aaa.unresponsive.eap_response is arista.avd.defined %}
+   {{ aaa_config }} eap response {{ dot1x.aaa.unresponsive.eap_response }}
+{%             endif %}
+{%             if dot1x.aaa.unresponsive.recovery_action_reauthenticate is arista.avd.defined(true) %}
+   {{ aaa_config }} recovery action reauthenticate
+{%             endif %}
+{%         endif %}
 {%         if dot1x.mac_based_authentication is arista.avd.defined %}
 {%             if dot1x.mac_based_authentication.delay is arista.avd.defined %}
    mac based authentication delay {{ dot1x.mac_based_authentication.delay }} seconds
@@ -35,56 +85,6 @@ dot1x
 {%             if dot1x.radius_av_pair.framed_mtu is arista.avd.defined %}
    radius av-pair framed-mtu {{ dot1x.radius_av_pair.framed_mtu }}
 {%             endif %}
-{%         endif %}
-{%     endif %}
-{%     if dot1x.aaa.unresponsive is arista.avd.defined %}
-{%         set aaa_config = "aaa unresponsive" %}
-{%         if dot1x.aaa.unresponsive.phone_action.apply_alternate is arista.avd.defined(true) %}
-{%             if dot1x.aaa.unresponsive.phone_action.apply_cached_results is arista.avd.defined(true) and dot1x.aaa.unresponsive.phone_action.traffic_allow is arista.avd.defined(true) %}
-{%                 if dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
-{{ aaa_config }} phone action apply cached-results timeout {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit }} else traffic allow
-{%                 else %}
-{{ aaa_config }} phone action apply cached-results else traffic allow
-{%                 endif %}
-{%             endif %}
-{%         elif dot1x.aaa.unresponsive.phone_action.traffic_allow is arista.avd.defined(true) %}
-{{ aaa_config }} phone action traffic allow
-{%         elif dot1x.aaa.unresponsive.phone_action.apply_cached_results is arista.avd.defined(true) %}
-{%             if dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
-{{ aaa_config }} phone action apply cached-results timeout {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.phone_action.cached_results_timeout.time_duration_unit }}
-{%             else %}
-{{ aaa_config }} phone action apply cached-results
-{%             endif %}
-{%         endif %}
-{%         if dot1x.aaa.unresponsive.action.apply_alternate is arista.avd.defined(true) %}
-{%             if dot1x.aaa.unresponsive.phone_action.traffic_allow is arista.avd.defined(true) %}
-{%                 set traffic = "traffic allow" %}
-{%             elif dot1x.aaa.unresponsive.phone_action.traffic_allow_vlan is arista.avd.defined %}
-{%                 set traffic = "traffic allow vlan " ~ dot1x.aaa.unresponsive.phone_action.traffic_allow_vlan %}
-{%             endif %}
-{%             if dot1x.aaa.unresponsive.action.apply_cached_results is arista.avd.defined(true) and (dot1x.aaa.unresponsive.action.traffic_allow is arista.avd.defined(true) or dot1x.aaa.unresponsive.action.traffic_allow_vlan is arista.avd.defined) %}
-{%                 if dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
-{{ aaa_config }} action apply cached-results timeout {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit }} else {{ traffic }}
-{%                 else %}
-{{ aaa_config }} action apply cached-results else {{ traffic }}
-{%                 endif %}
-{%             endif %}
-{%         elif dot1x.aaa.unresponsive.action.traffic_allow is arista.avd.defined(true) %}
-{{ aaa_config }} action traffic allow
-{%         elif dot1x.aaa.unresponsive.action.traffic_allow_vlan is arista.avd.defined %}
-{{ aaa_config }} action traffic allow vlan {{ dot1x.aaa.unresponsive.action.traffic_allow_vlan }}
-{%         elif dot1x.aaa.unresponsive.action.apply_cached_results is arista.avd.defined(true) %}
-{%             if dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration is arista.avd.defined and dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit is arista.avd.defined %}
-{{ aaa_config }} action apply cached-results timeout {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration }} {{ dot1x.aaa.unresponsive.action.cached_results_timeout.time_duration_unit }}
-{%             else %}
-{{ aaa_config }} action apply cached-results
-{%             endif %}
-{%         endif %}
-{%         if dot1x.aaa.unresponsive.eap_response is arista.avd.defined %}
-{{ aaa_config }} eap response {{ dot1x.aaa.unresponsive.eap_response }}
-{%         endif %}
-{%         if dot1x.aaa.unresponsive.recovery_action_reauthenticate is arista.avd.defined(true) %}
-{{ aaa_config }} recovery action reauthenticate
 {%         endif %}
 {%     endif %}
 {% endif %}
