--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -67,6 +67,8 @@
 {% include 'documentation/routing.j2' %}
 {# BFD #}
 {% include 'documentation/bfd.j2' %}
+{# Internet Exit #}
+{% include 'documentation/router-internet-exit.j2' %}
 {# MPLS #}
 {% include 'documentation/mpls.j2' %}
 {# Patch Panel #}
