--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
@@ -7,4 +7,51 @@
 {% if router_service_insertion.enabled is arista.avd.defined(true) %}
 
 Router service-insertion is enabled.
+{%     if router_service_insertion.connections is arista.avd.defined %}
+
+##### Network Services Information
+{%         for connection in router_service_insertion.connections | arista.avd.natural_sort('name') %}
+{%             if connection.name is arista.avd.defined and connection.interface is arista.avd.defined %}
+{%                 if connection.interface.ethernet is arista.avd.defined %}
+
+| Name | Interface | next_hop_ip_address |
+| ---- | --------- | ------------------- |
+{%                     break %}
+{%                 endif %}
+{%                 if connection.interface.tunnel is arista.avd.defined %}
+{%                     set tunnel_connection = true %}
+{%                 endif %}
+{%             endif %}
+{%         endfor %}
+{%         for connection in router_service_insertion.connections | arista.avd.natural_sort('name') %}
+{%             if connection.name is arista.avd.defined and connection.interface is arista.avd.defined %}
+{%                 if connection.interface.ethernet is arista.avd.defined %}
+| {{ connection.name }} | {{ connection.interface.ethernet.interface_name }} | {{ connection.interface.ethernet.next_hop_ip_address }} |
+{%                 endif %}
+{%             endif %}
+{%         endfor %}
+{%         for connection in router_service_insertion.connections | arista.avd.natural_sort('name') %}
+{%             if connection.name is arista.avd.defined and connection.interface is arista.avd.defined %}
+{%                 if connection.interface.tunnel is arista.avd.defined %}
+
+| Name | Primary Interface | Secondary Interface |
+| ---- | ----------------- | ------------------- |
+{%                     break %}
+{%                 endif %}
+{%             endif %}
+{%         endfor %}
+{%         for connection in router_service_insertion.connections | arista.avd.natural_sort('name') %}
+{%             if connection.name is arista.avd.defined and connection.interface is arista.avd.defined %}
+{%                 if connection.interface.tunnel is arista.avd.defined %}
+| {{ connection.name }} | {{ connection.interface.tunnel.primary_interface_name }} | {{ connection.interface.tunnel.secondary_interface_name }} |
+{%                 endif %}
+{%             endif %}
+{%         endfor %}
+{%     endif %}
+
+##### Router Service-Insertion Configuration
+
+```eos
+{%     include 'eos/router-service-insertion.j2' %}
+```
 {% endif %}
