--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-internet-exit.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-internet-exit.j2
@@ -8,35 +8,38 @@
 
 ### Router Internet Exit
 
-#### Exit Group Summary
-
-| Exit Group | Local Connection | Fib Default | Policy | Policy Exit Group |
-| ---------- | ---------------- | ----------- | ------ | ----------------- |
 {%     if router_internet_exit.exit_groups is arista.avd.defined %}
-{%         for exit_group in router_internet_exit.exit_groups | arista.avd.default([]) %}
-{%             if exit_group.local_connections is arista.avd.defined %}
-{%                 for local_connection in exit_group.local_connections | arista.avd.default([]) %}
-| {{ exit_group.name }} | {{ local_connection.name }} | - | - | - |
-{%                 endfor %}
-{%             endif %}
+#### Exit Groups Summary
+
+| Exit Groups | Local Connections | Fib Default |
+| ----------- | ----------------- | ----------- |
+{%         for exit_group in router_internet_exit.exit_groups %}
+{%             for local_connection in exit_group.local_connections | arista.avd.default([]) %}
+| {{ exit_group.name }} | {{ local_connection.name }} | - |
+{%             endfor %}
 {%             if exit_group.fib_default is arista.avd.defined(true) %}
-| {{ exit_group.name }} | - | True | - | - |
+| {{ exit_group.name }} | - | True |
 {%             endif %}
 {%             if exit_group.local_connections is not arista.avd.defined and exit_group.fib_default is not arista.avd.defined(true) %}
-| {{ exit_group.name }} | - | - | - | - |
+| {{ exit_group.name }} | - | - |
 {%             endif %}
 {%         endfor %}
 {%     endif %}
+
+
 {%     if router_internet_exit.policies is arista.avd.defined %}
-{%         for policy in router_internet_exit.policies | arista.avd.default([]) %}
-{%             if policy.exit_groups is arista.avd.defined %}
-{%                 for exit_group in policy.exit_groups | arista.avd.default([]) %}
-{%                     if exit_group.name is arista.avd.defined %}
-| - | - | - | {{ policy.name }} | {{ exit_group.name }} |
-{%                     endif %}
-{%                 endfor %}
-{%             else %}
-| - | - | - | {{ policy.name }} | - |
+#### Policies Summary
+
+| Policies | Policy Exit Groups |
+| -------- | ------------------ |
+{%         for policy in router_internet_exit.policies %}
+{%             for exit_group in policy.exit_groups | arista.avd.default([]) %}
+{%                 if exit_group.name is arista.avd.defined %}
+| {{ policy.name }} | {{ exit_group.name }} |
+{%                 endif %}
+{%             endfor %}
+{%             if policy.exit_groups is not arista.avd.defined %}
+| {{ policy.name }} | - |
 {%             endif %}
 {%         endfor %}
 {%     endif %}
