--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-intended-config.j2
@@ -92,6 +92,8 @@
 {% include 'eos/domain-list.j2' %}
 {# Object Tracking #}
 {% include 'eos/trackers.j2' %}
+{# switchport port-security #}
+{% include 'eos/switchport-port-security.j2' %}
 {# router adaptive-virtual-topology #}
 {% include 'eos/router-adaptive-virtual-topology.j2' %}
 {# router l2-vpn #}
